# link-shortener

./: .env  Cargo.toml  Dockerfile  client.http  docker-compose.yml
migrations/: 20240811080257_links.up.sql  20240812110558_link_statistics.up.sql
src/: auth.rs  dao.rs  main.rs  model.rs  routes.rs  utils.rs
