[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
sha3 = "0.10.8"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-cron-scheduler = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
#metrics = "0.23.0"
#axum-prometheus = "0.7.0"
#metrics-exporter-prometheus = "0.15.3"
